# chat_gpt_slack

./: Cargo.toml  LICENSE.md  README.md  env.example
src/: error.rs  lib.rs  main.rs
src/bot/: slack.rs
src/chat_gpt/: api.rs  auth.rs  mod.rs  request.rs  response.rs
