[package]
name = "chat_gpt_slack"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["chat-gpt", "slack"]
keywords = ["chat-gpt", "slack"]
description = "A slack bot for ChatGPT."
homepage = "https://github.com/AidenHadisi/chat_gpt_slack"
repository = "https://github.com/AidenHadisi/chat_gpt_slack"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0.37"
serde_json = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
